<resources>
    <string name="app_name">EasyList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Easy List v0.1</string>
    <string name="nav_header_subtitle">Arquiteturas Móveis</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Fragment Names -->
    <string name="menu_shoppinglists">Shopping Lists</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_measurementUnits">Measurement Units</string>
    <string name="menu_products">Products</string>
    <string name="fragment_add_measurementUnits">Add Measurement Unit</string>
    <string name="fragment_add_shoppingList">Add Shopping List</string>
    <string name="fragment_add_category">Add Category</string>
    <string name="fragment_add_product">Add Product</string>
    <string name="fragment_basket">Shopping Cart</string>

    <string name="edit_image_button">Edit Image Button</string>
    <string name="delete_image_button">Delete Image Button</string>
    <string name="create_list_button">Create List Button</string>
    <string name="add_product_button">Add Product Button</string>
    <string name="sort_by">Sort by:</string>

    <string name="all_sort">Show All</string>
    <string name="category_sort">Category</string>
    <string name="purchase_sort">Purchased</string>


    <string name="scanner">Scanner</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="create_shopping_list">Create Shopping List</string>
    <string name="create">Create</string>
    <string name="product_shopping_list_hint">Shopping List</string>
    <string name="shopping_list_name_hint">Name</string>
    <string name="add_new_product">Add New Product</string>
    <string name="product_name_hint">Name</string>
    <string name="product_description_hint">Description</string>
    <string name="product_brand_hint">Brand</string>
    <string name="product_bar_code_hint">Bar Code</string>
    <string name="product_price_history">Price History</string>
    <string name="product_purchase_price">Purchase Cost</string>
    <string name="product_lowest_price">Lowest Price</string>
    <string name="product_highest_price">Highest Price</string>
    <string name="add_button">Add</string>
    <string name="save_button">Save</string>
    <string name="scan_button">Scan</string>
    <string name="activity_add_product">Add Product</string>
    <string name="create_category_button">Create category button</string>
    <string name="create_measurementUnit_button">Create measurement unit button</string>
    <string name="add_category">Add Category</string>
    <string name="add_measurement">Add Measurement Unit</string>
    <string name="description">Description</string>
    <string name="designation">Designation</string>
    <string name="add">Add</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="category">Category</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="money_symbol">€</string>
    <string name="bar_code_scan_message">Scan the product bar code.</string>

    <!-- Input Error Messages -->
    <string name="need_name_error">Name is required.</string>
    <string name="product_already_exists_on_list">A product with this name and brand already exists in this list.</string>
    <string name="product_with_the_same_name_already_exists">There\'s already a product with the same name and brand.</string>
    <string name="shopping_list_already_exists">This name is already being used by another shopping list.</string>
    <string name="need_description_error">Description is required.</string>
    <string name="need_designation_error">Designation is required.</string>
    <string name="measurement_already_exists_error">Measurement unit already exists.</string>
    <string name="category_already_exists_error">Category already exists.</string>
    <string name="need_price_error">A value is required.</string>


    <!-- Snackbar Messages -->
    <string name="prefix_item_added_to_cart">Added\u0020</string>
    <string name="posfix_item_added_to_cart">\u0020to shopping cart.</string>
    <string name="prefix_item_removed_from_cart">Removed\u0020</string>
    <string name="posfix_item_removed_from_cart">\u0020from shopping cart.</string>
    <string name="prefix_purchased_registed">Purchased\u0020</string>
    <string name="posfix_purchased_registed">\u0020for €</string>
    <string name="invalid_quantity_message">Minimum value reached.</string>
    <string name="prefix_product_changes_saved">Saved\u0020</string>
    <string name="posfix_product_changes_saved">\u0020changes.</string>



    <string name="snackbar_dismiss">Dismiss</string>

    <!-- Dialogue Messages -->
    <string name="clear_basket_question">Are you sure?</string>
    <string name="clear_basket_message">By confirming all the products in your basket will be cleared.</string>
    <string name="submit_price">Submit</string>
    <string name="dialogue_cancel">Cancel</string>
    <string name="clear_basket_confirm">Clear Basket</string>
    <string name="delete_shopping_list_question">Delete Shopping List?</string>
    <string name="delete_shopping_list_message">By confirming the shopping list will be removed.</string>
    <string name="delete_shopping_list_confirm">Delete List</string>
    <string name="purchase_price_indication">Enter the price of\u0020</string>

    <string-array name="sort_by_array">
        <item>@string/all_sort</item>
        <item>@string/category_sort</item>
        <item>@string/purchase_sort</item>
    </string-array>

    <string name="copy_from_hint">Copy From</string>
    <string name="default_none_value">None</string>
    <string name="basket">Basket</string>
    <string name="max_value_cart">++</string>
    <string name="cart_instructions">To add/remove an item to the shopping cart long press it.</string>
    <string name="purchase_instruction">To register a purchased item long press it.</string>
</resources>