<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/menu_group_main">
        <item
            android:id="@+id/nav_shoppinglists"
            android:icon="@drawable/twotone_receipt_black_24"
            android:title="@string/menu_shoppinglists" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/twotone_wine_bar_black_24"
            android:title="@string/menu_products" />
    </group>
    <group android:id="@+id/menu_group_secundary">
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/twotone_bookmarks_black_24"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_measurementUnits"
            android:icon="@drawable/twotone_leaderboard_black_24"
            android:title="@string/menu_measurementUnits" />
    </group>
</menu>