<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.shoppingList.AddShoppingListFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            style="@style/big_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_shopping_list"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shopping_list_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shopping_list_name_hint"
            app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_shopping_list_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/copy_from_list_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/copy_from_hint"
            app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/input_corner_radius">

            <AutoCompleteTextView
                android:id="@+id/copy_list_auto_complete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:text="@string/default_none_value" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create_list_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="@dimen/padding_big"
            android:paddingEnd="@dimen/padding_big"
            android:text="@string/create" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>