<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.products.AddProductActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_product_list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_product_list_toolbar">

        <TextView
            style="@style/big_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_product"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/product_name_text_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/padding">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/product_description_text_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/padding">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_description_hint" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/product_quantity_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Quantity"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/category_measurement_unit_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/padding"
                android:paddingBottom="@dimen/padding" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/category_picker_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/padding" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/padding">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_brand_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_brand_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_product_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="@dimen/padding_big"
            android:paddingEnd="@dimen/padding_big"
            android:text="@string/add_button" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>